--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,6 +26,7 @@
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
             <li><a href="#services" data-after="Service">Services</a></li>
+            <li><a href="#experience" data-after="Experience">Experience</a></li>
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
@@ -65,40 +65,36 @@
       </div>
 
       <div class="service-bottom">
-        <div class="service-item">
+        <div class="service-item hidden">
           <div class="icon">
-            <img
-              src="https://img.icons8.com/bubbles/100/000000/services.png" />
+            <img src="https://img.icons8.com/bubbles/100/000000/services.png" />
           </div>
-          <h2>Node js</h2>
+          <h2>AI & Machine Learning</h2>
           <p>
-            I have been working on nodejs for a year now. I have worked on many projects with this framework
-            and I am confident to say I have have sufficient knowledge to work on other projects with nodejs framework
+            Experienced in building AI solutions using Python, TensorFlow, and PyTorch. Specialized in Graph Neural
+            Networks, RAG systems, and Deep Learning applications.
           </p>
         </div>
 
-        <div class="service-item">
+        <div class="service-item hidden">
           <div class="icon">
-            <img
-              src="https://img.icons8.com/bubbles/100/000000/services.png" />
+            <img src="https://img.icons8.com/bubbles/100/000000/services.png" />
           </div>
-          <h2>PHP</h2>
+          <h2>Full Stack Web Dev</h2>
           <p>
-            I have been working on a project with php and I became good at it.
-            also my work follows the professional way of working on web applications.
-            I build my applications by using MVC model
+            Proficient in modern web technologies including Node.js, Express, PHP, and Laravel. I build scalable,
+            user-friendly applications with a focus on clean code and performance.
           </p>
         </div>
 
-        <div class="service-item">
+        <div class="service-item hidden">
           <div class="icon">
-            <img
-              src="https://img.icons8.com/bubbles/100/000000/services.png" />
+            <img src="https://img.icons8.com/bubbles/100/000000/services.png" />
           </div>
-          <h2>C# .net Framework</h2>
+          <h2>Desktop Apps & C#</h2>
           <p>
-            I use c# for rapid application development for desktop applications and web applications.
-            I use this language for time sensitive projects to finish them fast and efficient
+            I use C# .NET for rapid application development of reliable desktop and web applications, delivering
+            efficient solutions for complex business needs.
           </p>
         </div>
 
@@ -108,156 +104,198 @@
     </div>
 
     </div>
-  </section>
-  <!-- End Service Section -->
+    <!-- End Service Section -->
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <div class="projects container">
-      <div class="projects-header">
-        <h1 class="section-title">Recent <span>Projects</span></h1>
-      </div>
-      <div class="all-projects">
-
-
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>TOUR AND TRAVEL WEB APP</h2>
-            <p>
-              I built this web application for tour and travel company. I worked on this project with HTML,CSS,JAVASCRIPT for front end and NODEJS framework for the backend it is accessible on my
-              GitHub you can check out my work<a href="//github.com/abel149/tour-and-travel" style="color : orange ;">here</a>
-            </p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img" />
-          </div>
+    <!-- Experience Section -->
+    <section id="experience">
+      <div class="experience container">
+        <div class="experience-header">
+          <h1 class="section-title">Work <span>Experience</span></h1>
         </div>
-
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Registration And Grading System </h2>
-            <p>
-              I built this web application by using bootstrap for the frontend and PHP for the backend you can get it on GitHub <a href="https://github.com/abel149/registration-and-grading-system" style="color : orange ;">here</a> </p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img" />
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 3</h1>
-            <h2>INVENTORY MANEGMENT SYSTEM</h2>
-            <p>
-              I am building this project by using c# .net framework.
-              It has more than four roles who can access to the software including the
-              admin it helps to manage a a store or other inventory's more effectively
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img" />
+        <div class="all-experience">
+          <div class="experience-item hidden">
+            <div class="experience-info">
+              <h1>iCog Labs</h1>
+              <h2>Software Developer / Research Intern</h2>
+              <h4>May 2025 - Dec 2025</h4>
+              <ul class="experience-list">
+                <li><strong>Graph Mining Optimization:</strong> Enhanced SPMiner performance by optimizing time/space
+                  complexity and implementing multiprocessing. Successfully trained order embedding models on real
+                  datasets.</li>
+                <li><strong>AI Assistant Development:</strong> Built a RAG-based AI assistant system, implementing
+                  efficient chunking strategies, metadata schemas, and vector storage integration using Qdrant.</li>
+                <li><strong>Infrastructure & CI/CD:</strong> Improved BioCypher-KG workflows with Docker fixes, GitHub
+                  Actions enhancements, and new writer supports (Parquet, NetworkX).</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- End Projects Section -->
+    </section>
+    <!-- End Experience Section -->
 
-  <!-- About Section -->
-  <section id="about">
-    <div class="about container">
-      <div class="col-left">
-        <div class="about-img">
-          <img src="./img/profile.jpg" alt="img" />
+    <!-- Projects Section -->
+    <section id="projects">
+      <div class="projects container">
+        <div class="projects-header">
+          <h1 class="section-title">Recent <span>Projects</span></h1>
         </div>
-      </div>
-      <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
-        <h2>Web App Developer</h2>
-        <p>
-          My name is Abel Ashenafi.I am a computer science student and
-          software Developer and I have been working on web app
-          development for 1 years and now I am working on web development and
-          descktop applications. My main goal is to create user-friendly and
-          efficient applications.
-        </p>
-        <a href="#" class="cta">Download Resume</a>
-      </div>
-    </div>
-  </section>
-  <!-- End About Section -->
-  <section id="blog">
+        <div class="all-projects">
 
-  </section>
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="contact container">
-      <div>
-        <h1 class="section-title">Contact <span>info</span></h1>
-      </div>
-      <div class="contact-items">
-        <div class="contact-item">
-          <div class="icon">
-            <img src="https://img.icons8.com/bubbles/100/000000/phone.png" />
+          <div class="project-item hidden">
+            <div class="project-info">
+              <h1>Project 1</h1>
+              <h2>SPMiner Optimization</h2>
+              <p>
+                Optimized a subgraph mining tool for better performance and scalability. Implemented multiprocessing,
+                fixed critical attributes handling, and trained embedding models using Python and Graph Neural Networks
+                concepts.
+              </p>
+            </div>
+            <div class="project-img">
+              <img src="./img/img-1.png" alt="img" />
+            </div>
           </div>
-          <div class="contact-info">
-            <h1>Phone</h1>
-            <h2>+251941192566</h2>
-            <h2>+251---------</h2>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="icon">
-            <img
-              src="https://img.icons8.com/bubbles/100/000000/new-post.png" />
-          </div>
-          <div class="contact-info">
-            <h1>Email</h1>
-            <h2>ashenafiabel49@gmail.com</h2>
-            <h2>ashenafiabel66@gmail.com</h2>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="icon">
-            <img
-              src="https://img.icons8.com/bubbles/100/000000/map-marker.png" />
-          </div>
-          <div class="contact-info">
-            <h1>Address</h1>
-            <h2>Addiss Ababa, N/F/S , lafto</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Contact Section -->
 
-  <!-- Footer -->
-  <section id="footer">
-    <div class="footer container">
-      <div class="brand">
-        <h1><span>A</span>BEL <span>A</span>SHENAFI</h1>
-      </div>
-      <h2>Your Complete Web Solution</h2>
-      <div class="social-icon">
-        <div class="social-item">
-          <a href="#"><img
-              src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img
-              src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
-        </div>
+          <div class="project-item hidden">
+            <div class="project-info">
+              <h1>Project 2</h1>
+              <h2>RAG-based AI Assistant</h2>
+              <p>
+                Developed a Retrieval-Augmented Generation system. Designed storage schemas for MongoDB and Qdrant,
+                implemented semantic search pipelines, and optimized data chunking for large codebases.
+              </p>
+            </div>
+            <div class="project-img">
+              <img src="./img/img-1.png" alt="img" />
+            </div>
+          </div>
 
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
+          <div class="project-item hidden">
+            <div class="project-info">
+              <h1>Project 3</h1>
+              <h2>TOUR AND TRAVEL WEB APP</h2>
+              <p>
+                I built this web application for tour and travel company. I worked on this project with HTML, CSS,
+                JAVASCRIPT for front end and NODEJS framework for the backend. Check it out <a
+                  href="//github.com/abel149/tour-and-travel" style="color: crimson;">here</a>.
+              </p>
+            </div>
+            <div class="project-img">
+              <img src="./img/img-1.png" alt="img" />
+            </div>
+          </div>
+
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Project 4</h1>
+              <h2>Registration And Grading System</h2>
+              <p>
+                I built this web application by using bootstrap for the frontend and PHP for the backend. You can get it
+                on GitHub <a href="https://github.com/abel149/registration-and-grading-system"
+                  style="color: crimson;">here</a>.
+              </p>
+            </div>
+            <div class="project-img">
+              <img src="./img/img-1.png" alt="img" />
+            </div>
+          </div>
+
         </div>
       </div>
-      <p>Copyright © 2020 Abel. All rights reserved</p>
-    </div>
-  </section>
-  <!-- End Footer -->
-  <script src="./app.js"></script>
+    </section>
+    <!-- End Projects Section -->
+
+    <!-- About Section -->
+    <section id="about">
+      <div class="about container">
+        <div class="col-left hidden">
+          <div class="about-img">
+            <img src="./img/profile.jpg" alt="img" />
+          </div>
+        </div>
+        <div class="col-right hidden">
+          <h1 class="section-title">About <span>me</span></h1>
+          <h2>Web App Developer</h2>
+          <p>
+            My name is Abel Ashenafi. I am a Computer Science student at St. Mary’s University (Expected Graduation: Jan
+            2026) with a CGPA of 3.75.
+            Passionate about Back-end Development, AI, Machine Learning, and Deep Learning. I have hands-on experience
+            in building complex systems like Graph Miners and RAG Assistants.
+          </p>
+          <a href="#" class="cta">Download Resume</a>
+        </div>
+      </div>
+    </section>
+    <!-- End About Section -->
+    <section id="blog">
+
+    </section>
+    <!-- Contact Section -->
+    <section id="contact">
+      <div class="contact container">
+        <div>
+          <h1 class="section-title">Contact <span>info</span></h1>
+        </div>
+        <div class="contact-items">
+          <div class="contact-item">
+            <div class="icon">
+              <img src="https://img.icons8.com/bubbles/100/000000/phone.png" />
+            </div>
+            <div class="contact-info">
+              <h1>Phone</h1>
+              <h2>+251941192566</h2>
+              <h2>+251---------</h2>
+            </div>
+          </div>
+          <div class="contact-item">
+            <div class="icon">
+              <img src="https://img.icons8.com/bubbles/100/000000/new-post.png" />
+            </div>
+            <div class="contact-info">
+              <h1>Email</h1>
+              <h2>ashenafiabel49@gmail.com</h2>
+              <h2>ashenafiabel66@gmail.com</h2>
+            </div>
+          </div>
+          <div class="contact-item">
+            <div class="icon">
+              <img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" />
+            </div>
+            <div class="contact-info">
+              <h1>Address</h1>
+              <h2>Addiss Ababa, N/F/S , lafto</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Contact Section -->
+
+    <!-- Footer -->
+    <section id="footer">
+      <div class="footer container">
+        <div class="brand">
+          <h1><span>A</span>BEL <span>A</span>SHENAFI</h1>
+        </div>
+        <h2>Your Complete Web Solution</h2>
+        <div class="social-icon">
+          <div class="social-item">
+            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+          </div>
+          <div class="social-item">
+            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+          </div>
+
+          <div class="social-item">
+            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
+          </div>
+        </div>
+        <p>Copyright © 2020 Abel. All rights reserved</p>
+      </div>
+    </section>
+    <!-- End Footer -->
+    <script src="./app.js"></script>
 </body>
 
 </html>
