Refactor the experience section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,19 @@
             </ul>
           </div>
         </div>
+        <div class="experience-item hidden">
+          <div class="experience-info">
+            <h1>Freelance Full Stack Developer</h1>
+            <h2>Various Clients</h2>
+            <h4>2023 - Present</h4>
+            <ul class="experience-list">
+              <li><strong>Web Application Development:</strong> Developed and deployed responsive web applications for small businesses, improving user experience and client engagement.</li>
+              <li><strong>Backend Services:</strong> Built and maintained backend services using Node.js, Express, and Laravel, ensuring secure and efficient data flow between systems.</li>
+              <li><strong>API Development:</strong> Designed and implemented RESTful APIs and database interactions to support dynamic application features.</li>
+              <li><strong>Frontend Development:</strong> Created user-friendly interfaces using React, with a strong focus on performance, responsiveness, and accessibility.</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </section>
