--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             <span class="tech-tag">Express</span>
             <span class="tech-tag">React</span>
             <span class="tech-tag">MongoDB</span>
+            <span class="tech-tag">Laravel </span>
+            <span class="tech-tag">MySQL</span>
           </div>
         </div>
 
